--- a/src/components/MyRecipe/MyRecipeCSS.module.css
+++ b/src/components/MyRecipe/MyRecipeCSS.module.css
@@ -46,15 +46,6 @@
   text-align: center;
 }
 
-.title {
-  /* background: orange; */ /* DEV */
-  font-family: Roboto;
-  letter-spacing: 0.15008px;
-  line-height: 24px;
-  margin-top: 7px;
-  color: beige
-}
-
 .eachRow {
   /* background: gray; */ /* DEV */
   margin: 6px 0px;
@@ -78,21 +69,6 @@
   height: 56px;
   justify-content: center;
   align-items: center;
-}
-
-.textFieldInput {
-  color: transparent
-}
-
-.summaryContainer {
-  /* background: salmon; */ /* DEV */
-  display: flex;
-  position: relative;
-  width: 100% !important;
-}
-
-.summaryContainer ::placeholder {
-  color: rgba(245, 245, 220, 0.3) !important
 }
 
 .selectContainer {
@@ -121,43 +97,17 @@
   color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
 }
 
-/* .input {
-  display: flex;
-  position: relative;
-  background: rgba(128, 128, 128, 0.2);
-  border-radius: 4px;
-  width: 100% !important;
-} */
-
-.input ::placeholder {
-  color: rgba(245, 245, 220, 0.3) !important;
-}
-
-/* .inputStyle {
-  color: rgba(245, 245, 220, 0.85) !important;
-  caret-color: rgba(0, 0, 0, 0.87) !important;
-} */
-
 .inputLayer {
   display: flex !important;
   white-space: pre !important; /* SINGLE LINE */
   margin-left: 15px !important;
   padding: 18.5px 0px 16.5px 0px !important;
   position: absolute !important;
-  /* position: relative !important; */
-  /* width: calc(100% - 113px - 28px); */
   font-size: 16px;
   font-family: Roboto;
-  /* width: calc(100% - 113px - 28px); */
-  /* width: calc(100% - 113px - 38px); */
   overflow: hidden;
-  background: orange;
-  /* color: rgba(245, 245, 220, 0.85) */
-  /* color: transparent; */ /* THIS */
-  color: gray; /* TEST */
-  /* color: transparent !important; */
-   /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-  /* width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 32px); */
+  /* background: orange; */ /* DEV */
+  /* color: gray; */ /* DEV */
   /* width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 32px) */
   /* width: calc(100% - 113px - 10px  - 10px) */
   width: calc(100% - 113px - 32px)
@@ -176,21 +126,14 @@
   background: rgba(128, 128, 128, 0.2); /* INPUT BACKGROUND */
   border-radius: 4px;
   width: calc(100% - 28px); /* ON SINGLE LINE */
-  
-  /* width: calc(100% - 32px); */ /* ON MULTILINE LINE */
   font-size: 16px;
   font-family: Roboto;
   padding: 16.5px 14px 16.5px 14px !important;
-  /* padding: 16.5px 14px 0px 14px !important; */
   border: 2px solid transparent;
   outline: 1px solid rgba(0, 0, 0, 0.2);
   color: rgba(245, 245, 220, 0.85);
   resize: none; /* FOR TEXTAREA */
   overflow: hidden;
-  /* height: 20px !important; */
-  /* max-height: 30px; */
-  /* height: 10px; */
-  /* height: 56px !important; */
   height: 19px; /* ONLY FOR STEPS ? */
 }
 
@@ -206,62 +149,6 @@
 .inputBase::placeholder {
   color: rgba(245, 245, 220, 0.45) !important
 }
-
-.inputBaseImage {
-  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
-  caret-color: rgba(0, 0, 0, 0.87) !important;
-}
-
-.inputHealth {
-  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
-  caret-color: rgba(0, 0, 0, 0.87) !important;
-}
-
-.inputShownSummary {
-  /* background: lightblue; */ /* DEV */
-  display: flex;
-  position: absolute !important;
-  flex-wrap: wrap !important; /* MULTILINE */
-  white-space: pre-wrap !important; /* MULTILINE */
-  overflow-wrap: break-word; /* MULTILINE */
-  margin-left: 10px !important;
-  padding: 16.5px 0px 16.5px 0px !important;
-  width: calc(100% - 28px);  /* width: calc(100% - 113px - 28px); */
-  color: transparent !important; /* NO GRAY COLOR */
-}
-
-.inputHiddenSummary {
-  display: flex;
-  position: relative;
-  width: 100% !important;
-  background: rgba(128, 128, 128, 0.2); /* INPUT BACKGROUND */
-  border-radius: 4px;
-}
-
-.inputShownSummary mark {
-  color: rgba(245, 245, 220, 0.85) !important; /* MARKDOWN COLOR */
-  background: rgba(0, 255, 0, 0.4) !important; /* MARKDOWN BACKGROUND */
-}
-
-.inputSummary {
-  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
-  caret-color: rgba(0, 0, 0, 0.87) !important;
-}
-
-.instructionsContainer {
-  /* background: red; */ /* DEV */
-  width: 100% !important;
-}
-
-
-.inputInstructions {
-  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
-  caret-color: rgba(0, 0, 0, 0.87) !important;
-}
-
-/* .inputStep {
-  width: 48vw;
-} */
 
 .label {
   color: rgba(245, 245, 220, 0.3) !important;
@@ -285,10 +172,6 @@
 }
 
 .eachStep:last-child { margin-bottom: 0px }
-
-/* eachRow 80vw */
-/* (text) 12vw + 68vw (input) */
-/* (text) 12vw + 6vw (step) + 48vw (input) + 7vw (button) + 7vw (button) */
 
 .stepTitle {
   /* background: yellow; */ /* DEV */
@@ -314,18 +197,10 @@ BUTTON IS DISABLED */
 .buttonAddHelper {
   display: flex;
   position: relative;
-  /* background: red; */
-  /* background: rgba(0,0,0,0.2); */
-  /* background: rgba(0,0,0,0.1); */
-  background: rgb(255, 215, 0, 0.5);
-  /* height: 36.5px; */
+  /* background: rgb(255, 215, 0, 0.5); */ /* DEV */
   height: 36.5px;
-  /* height: 40px; */
-  /* background: rgba(0,0,0,0.2); */
   align-self: center;
   margin-left: 10px; /* +2px BORDER */
-  /* margin-right: 100px; */
-  /* margin-right: 100px !important; */
 }
 
 .buttonNew {
@@ -349,42 +224,20 @@ BUTTON IS DISABLED */
 .buttonDeleteHelper {
   display: flex;
   position: relative;
-  /* background: red; */
-  /* background: rgba(0,0,0,0.2); */
-  /* background: rgba(0,0,0,0.1); */
-  background: rgb(255, 215, 0, 0.5);
-  /* height: 36.5px; */
+  /* background: rgb(255, 215, 0, 0.5); */ /* DEV */
   height: 36.5px;
-  /* height: 40px; */
-  /* background: rgba(0,0,0,0.2); */
   align-self: center;
   margin-left: 10px;
-  /* margin-right: 100px; */
-  /* margin-right: 100px !important; */
 }
 
 .buttonDelete {
   white-space: nowrap;
-  /* height: 36.5px; */
   color: white;
-  /* align-self: center; */
   min-width: 0px !important;
 }
 
 .buttonDelete:hover {
   background: #eb0909 !important
-}
-
-.optionsLeft {
-  display: flex;
-  flex-direction: column;
-  text-align: right;
-  padding-right: 0.5vw;
-}
-
-.optionsRight {
-  display: flex;
-  flex-direction: column;
 }
 
 .buttonClearSave {
@@ -410,29 +263,9 @@ BUTTON IS DISABLED */
   .background { width: 100vw !important}
   .imageSearcher { width: 90% !important }
   .text { display: none }
-  .stepTitle  { display: none }
-  .inputShownTitle { /* width: calc(100% - 28px) */ }
-  /* .inputLayerInstructions { */
-    /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    /* width: calc(100% - 10px - 40px - 10px - 40px - 28px) !important; */
-    /* width: calc(100% - 10px) !important; */
-  /* } */
-  .inputLayer {
-    /* width: calc(100% - 298px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    /* width: calc(100% - 113px - 57px - 10px - 40px - 10px - 40px - 32px) !important */
-    /* width: calc(100% - 10px) !important */
-    width: calc(100% - 32px) !important
-    
-
-  }
-  .inputLayerInstructions {
-    /* width: calc(100% - 298px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    /* width: calc(100% - 113px - 57px - 10px - 40px - 10px - 40px - 32px) !important */
-    /* width: calc(100% - 10px) !important */
-    width: calc(100% - 40px - 10px - 40px - 10px - 32px) !important
-    
-
-  }
+  .stepTitle { display: none }
+  .inputLayer { width: calc(100% - 32px) !important }
+  .inputLayerInstructions { width: calc(100% - 40px - 10px - 40px - 10px - 32px) !important }
 }
 
 /* LESS THAN 650px */
@@ -453,14 +286,7 @@ BUTTON IS DISABLED */
   .buttonDelete:after {
     content: '❌';
   }
-  .inputLayerInstructions {
-    /* width: calc(100% - 298px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    /* width: calc(100% - 113px - 57px - 10px - 40px - 10px - 40px - 32px) !important */
-    width: calc(100% - 113px - 57px - 10px - 40px - 10px - 40px - 32px)
-    /* width: calc(100% - 10px) !important */
-    /* width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 32px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */ 
-
-  }
+  .inputLayerInstructions { width: calc(100% - 113px - 57px - 10px - 40px - 10px - 40px - 32px) }
 }
 
 /* MORE THAN 651px */
@@ -470,7 +296,7 @@ BUTTON IS DISABLED */
     min-width: 60px !important;
     width: 60px !important;
   }
-  .buttonAddHelper{
+  .buttonAddHelper {
     max-width: 60px !important;
     min-width: 60px !important;
     width: 60px !important;
@@ -491,15 +317,5 @@ BUTTON IS DISABLED */
   .buttonDelete:after {
     content: 'DELETE';
   }
-  .inputBaseInstructions {
-    /* width: calc(100% - 358px); */ /* 100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px */
-    /* width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    /* width: calc(100% - 60px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-  }
-  .inputLayerInstructions {
-    /* width: calc(100% - 358px); */ /* 100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px */
-    /* width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    /* width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 32px) !important; */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
-    width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 32px);
-  }
+  .inputLayerInstructions { width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 32px) }
 }
