--- a/src/components/GoBack/GoBackCSS.module.css
+++ b/src/components/GoBack/GoBackCSS.module.css
@@ -22,6 +22,7 @@
 }
 
 .linkText {
+  /* background: gray; */ /* DEV */
   display: flex;
   flex-direction: column;
   text-decoration: none;
@@ -29,8 +30,9 @@
   justify-content: center;
   font-size: 24px;
   font-weight: 700;
-  width: 115px;
-  text-align: right;
   color: #FFFFFF;
   text-decoration: none !important;
+  text-align: left;
+  margin-left: 10px;
+  width: max-content;
 }
