--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,17 +12,12 @@
   width: 100%;
   height: 100%;
   /* background: url('./images/bgImage.webp'); */
-  /* background-image: unset; */
+  /* background-image: url('./images/bgImage.webp'); */
+  /* background: red; */
+  background-image: unset;
   background-size: cover;
   background-repeat: no-repeat;
 }
-
-/* background: #808080; DARKGRAY */
-/* background: #dcdcdc; LIGHTGRAY */
-/* background: #2e074a; DARKVIOLET */
-/* background: #4f6b16; DARKOLIVE */
-/* background: #5c0606; DARKRED */
-/* background: #030380; DARKBLUE */
 
 .wallpaperNav {
   display: flex;
