--- a/src/components/Landing/LandingCSS.module.css
+++ b/src/components/Landing/LandingCSS.module.css
@@ -17,6 +17,7 @@
   width: 100vw;
   height: 100vh;
   /* filter: blur(3px); */
+  /* backdrop-filter: blur(3px); */
   /* filter: unset; */
   top: -5px;
   left: -5px;
